--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ nav.fa {
     padding: 30px;
   }
 }
-/*----------course------*/
+
+/*---------------------------course--------------------------------*/
 .course {
   width: 80%;
   margin: auto;
@@ -162,7 +163,9 @@ h3 {
   }
 }
 
-/*---books---------*/
+
+
+/*---------------------------books-----------------------------------*/
 .books {
   width: 80%;
   margin: auto;
@@ -211,7 +214,8 @@ h3 {
   opacity: 1;
 }
 
-/*---------facilities-----------------*/
+
+/*---------------------------------facilities-------------------------*/
 .facilities {
   width: 80%;
   margin: auto;
@@ -236,7 +240,10 @@ h3 {
   margin-bottom: 15px;
   text-align: left;
 }
-/*-------testimonials---*/
+
+
+
+/*----------------------------testimonials------------------------*/
 .testimonials {
   width: 80%;
   margin: auto;
@@ -275,7 +282,10 @@ h3 {
     margin-right: 15px;
   }
 }
-/*------call to action----*/
+
+
+
+/*------------------------call to action------------------------------*/
 .cta {
   margin: 100px auto;
   width: 80%;
@@ -299,9 +309,9 @@ h3 {
   }
 }
 
-/*------------footer-----*/
+/*-----------------------------footer------------------------------------*/
 
-.footer {
+.footer-col2{
   width: 100%;
   text-align: center;
   padding: 30px 0;
@@ -310,6 +320,7 @@ h3 {
 .footer h4 {
   margin-bottom: 25px;
   margin-top: 20px;
+  color: #03023d;
   font-weight: 600;
 }
 .icons .fa {
@@ -321,9 +332,18 @@ h3 {
 .fa-heart-o {
   color: #169ddb;
 }
-/*--------------About page-----------*/
 
-.sub-header {
+.footer-col1{
+  width: 100%;
+  text-align: left;
+  padding: 30px 0;
+}
+
+
+
+/*-------------------------About page-----------------------------------*/
+
+.header1 {
   height: 50vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
@@ -333,33 +353,33 @@ h3 {
   text-align: center;
   color: #fff;
 }
-.sub-header h1 {
+/*.header1 h1 {
   margin-top: 100px;
-}
-.about {
+}*/
+.about{
   width: 80%;
   margin: auto;
   padding-top: 80px;
   padding-bottom: 50px;
 }
 
-.about-col {
+.about-col{
   flex-basis: 48%;
   padding: 30px 2px;
 }
 
-.about-col img {
-  width: 100%;
+.about-col img{
+  width: 90%;
 }
 
-.about-col h1 {
+.about-col h1{
   padding-top: 0;
 }
 
-.about-col p {
+.about-col p{
   padding: 15px 0 25px;
 }
-.blue-btn {
+.blue-btn{
   border: 1px solid#03023d;
   background: transparent;
   color: #03023d;
@@ -368,7 +388,8 @@ h3 {
 .blue-btn:hover {
   color: #fff;
 }
-/*-----------Connect-----*/
+
+/*------------------------------Connect-----------------------------------*/
 .connect {
   width: 80%;
   margin: auto;
