--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav img {
   font-size: 13px;
 }
 .nav-links ul li::after {
-  content: "";
+  content:'';
   width: 0%;
   height: 2px;
   background: #0899b3;
@@ -82,29 +82,29 @@ nav img {
   transition: 1s;
 }
 
-nav.fa {
+nav.fa{
   display: none;
 }
-
-@media (max-width: 700px) {
+@media (max-width: 700px){
   .text-box h1 {
     font-size: 20px;
   }
 
-  .nav-links ul li {
+  .nav-links ul li{
     display: block;
   }
-  .nav-links {
+  .nav-links{
     position: absolute;
     background: #03023d;
     height: 100vh;
     width: 200px;
     top: 0;
-    right: -200;
+    right: -200px;
     text-align: left;
     z-index: 2;
     transition: 1s;
   }
+
   nav.fa {
     display: block;
     color: #fff;
