Updated with relative paths

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   min-height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url("E:/Assignment2/A2/images/bg.jpg");
+    url('../../ASG2/images/bg.jpg');
   background-position: center;
   background-size: cover;
   position: relative;
@@ -291,7 +291,7 @@ h3 {
   width: 80%;
   background-image: linear-gradient();
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(E:/Assignment2/A2/images/img1.jpg);
+    url('../../ASG2/images/img1.jpg');
   background-position: center;
   background-size: cover;
   border-radius: 10px;
@@ -347,7 +347,7 @@ h3 {
   height: 50vh;
   width: 100%;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url("E:/Assignment2/A2/images/bg3.jpg");
+    url("images/bg3.jpg");
   background-position: center;
   background-size: cover;
   text-align: center;
