--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,15 @@ nav img {
 .nav-links ul li:hover::after {
   width: 100%;
 }
-
-.subMenu1{
-  /* display:none; */
-}
 .nav-links ul li:hover .subMenu{
   display:block;
   position: absolute;
   background: transparent;
   margin-top: 15px;
   margin-left: -15px;
+}
+.nav-links a.active{
+  border-bottom: 3px solid rgb(13, 139, 174);
 }
 
 .text-box {
@@ -132,9 +131,15 @@ nav.fa {
     padding: 30px;
   }
 }
+hr{
+  color: #03023d;
+  height:2px;
+  border-width:0;
+  background-color:#03023d;
+}
 
-/*---------------------------course--------------------------------*/
-.course {
+/*---------------------------Events--------------------------------*/
+.events {
   width: 80%;
   margin: auto;
   text-align: center;
@@ -143,9 +148,10 @@ nav.fa {
 h1 {
   font-size: 36px;
   font-weight: 600;
+  color: #03023d;
 }
 p {
-  color: #1722b9;
+  color: #0c0b51;
   font-size: 14px;
   font-weight: 300;
   line-height: 22px;
@@ -156,7 +162,7 @@ p {
   display: flex;
   justify-content: space-between;
 }
-.course-col {
+.events-col {
   flex-basis: 31%;
   background: #9febe4;
   border-radius: 10px;
@@ -169,7 +175,7 @@ h3 {
   font-weight: 600;
   margin: 10px 0;
 }
-.course-col:hover {
+.events-col:hover {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 @media (max-width: 700px) {
@@ -178,22 +184,22 @@ h3 {
   }
 }
 
-/*---------------------------books-----------------------------------*/
-.books {
+/*---------------------------Services-----------------------------------*/
+.services{
   width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 50px;
 }
 
-.books-col {
+.services-col {
   flex-basis: 32%;
   border-radius: 10px;
   margin-bottom: 30px;
   position: relative;
   overflow: hidden;
 }
-.books-col img {
+.services-col img {
   width: 100%;
   height: 90%;
   display: block;
@@ -227,32 +233,40 @@ h3 {
   opacity: 1;
 }
 
-/*---------------------------------facilities-------------------------*/
-.facilities {
+/*---------------------------------New Books-------------------------*/
+.newBooks {
   width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 100px;
 }
-.facilities-col {
+.newBooks-col {
   flex-basis: 31%;
   border-radius: 10px;
   margin-bottom: 5%;
   text-align: left;
 }
-.facilities-col img {
-  width: 100%;
+.newBooks-col img {
+  width:50%;
   border-radius: 10px;
+  align-items: center;
 }
-.facilities-col p {
+.newBooks-col p {
   padding: 0;
+  width: 60%;
+  text-align:justify;
+  color: #2b2b4b;
 }
-.facilities-col h3 {
+.newBooks-col h3 {
+  text-align: center;
   margin-top: 16px;
   margin-bottom: 15px;
   text-align: left;
 }
-
+.newBooks h3 a{
+  color: #03023d;
+  text-decoration: none;
+}
 /*----------------------------testimonials------------------------*/
 .testimonials {
   width: 80%;
@@ -265,7 +279,7 @@ h3 {
   border-radius: 10px;
   margin-bottom: 5%;
   text-align: left;
-  background: #03023d;
+  background: #9febe4;
   padding: 25px;
   cursor: pointer;
   display: flex;
@@ -284,7 +298,7 @@ h3 {
   text-align: left;
 }
 .testimonial-col .fa {
-  color: #fff;
+  color: #03023d;
 }
 @media (max-width: 700px) {
   .testimonial-col img {
@@ -307,7 +321,7 @@ h3 {
   padding: 100px 0;
 }
 .cta h1 {
-  color: rgb(198, 196, 233);
+  color: #fff;
   margin-bottom: 40px;
   padding: 0;
 }
@@ -318,7 +332,9 @@ h3 {
 }
 
 /*-----------------------------footer------------------------------------*/
-
+.footer{
+  background: rgb(210, 246, 248);
+}
 
 .footer h4 {
   margin-bottom: 25px;
