--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,11 @@
   background-size: cover;
   position: relative;
 }
+.account{
+  text-align: right;
+}
 
 /*---------------Searchbar-------------*/
-
 .search-bar {
   width: 100%;
   max-height: 60px;
