Added JS CRUD Operations

--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,10 @@ h3 {
   }
 }
 
+.update-btn {
+  display: none;
+}
+
 /*-----------------------------footer------------------------------------*/
 .footer {
   background: rgb(210, 246, 248);
